[NAE-2027] Netgrif modules
- updated groups